...
    super(['DatabaseService'], npub);
    this.expiry = new Date(Date.now());
  }

  async taskLogic(
    { DatabaseService }: { DatabaseService: DatabaseService },
    npub: string,
  ): Promise<AllowedBunkerClientWithDates | null> {
    const hexPubkey = keyToHex(npub);
    const client = await DatabaseService.getBunkerClientOrNull(hexPubkey);
    return client;
  }
}
...
